GS-183 : Button align fixes

--- a/gae-studio/gae-studio-client/src/main/resources/com/arcbees/gaestudio/client/resources/styles.css
+++ b/gae-studio/gae-studio-client/src/main/resources/com/arcbees/gaestudio/client/resources/styles.css
@@ -337,7 +337,6 @@ input:focus, textarea:focus, button:focus {
 }
 
 .button {
-    padding: 5px 32px 5px 32px;
     border: none;
     display: inline-block;
     margin-right: 5px;
